--- a/src/styles/light.scss
+++ b/src/styles/light.scss
@@ -227,6 +227,14 @@ _:-ms-fullscreen,
   overflow: hidden;
 }
 
+.ps {
+  overflow: hidden auto !important;
+}
+
+.ps__rail-y {
+  display: none !important;
+}
+
 .linechart-legend-table .linechart-legend-series:nth-child(odd) {
   background: #dde4ed;
 }
